--- a/index.html
+++ b/index.html
@@ -160,7 +160,8 @@
             </div>
         </div>
 
-        <div id="prewedding" class="section text-center">
+        <div id="prewedding" class="section text-center background-white">
+            <img src="/assets/design.webp" alt="" srcset="" class="design">
             <div class="row section-header">
                 <div class="col col-md-10 offset-md-1">
                     <h1>Pre wedding</h1>
@@ -191,7 +192,7 @@
             </div>
         </div>
 
-        <footer class="text-center fp-auto-height fp-section background-white">
+        <footer class="text-center fp-auto-height fp-section">
             <div class="row">
                 <div class="col">
                     Designed and built by the bride and groom!
