--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <img src="assets/loader.gif" alt="">
     </div>
     <div class="container-fluid p-0" id="fullpage">
-        <div id="wedding-banner" class="section">
+        <div id="wedding-banner" data-anchor="wedding-banner" class="section">
             <span class="down-arrow">
                 <i class="fas fa-chevron-down" onclick="fullpage_api.moveSectionDown();"></i>
             </span>
@@ -62,7 +62,7 @@
             </div>
         </div>
 
-        <div id="bride-groom" class="section text-center">
+        <div id="bride-groom" data-anchor="bride-groom" class="section text-center">
             <div class="row section-header">
                 <div class="col-12">
                     <h1>Bride and Groom</h1>
@@ -110,7 +110,7 @@
             </div>
         </div>
 
-        <div id="events" class="section background-white text-center">
+        <div id="events" data-anchor="events" class="section background-white text-center">
             <img src="/assets/design.webp" alt="" srcset="" class="design">
             <div class="row section-header">
                 <div class="col-12">
@@ -145,7 +145,7 @@
             </div>
         </div>
 
-        <div id="engagement" class="section text-center background-white">
+        <div id="engagement" data-anchor="engagement" class="section text-center background-white">
             <img src="/assets/design.webp" alt="" srcset="" class="design">
             <div class="row section-header">
                 <div class="col col-md-10 offset-md-1">
@@ -164,7 +164,7 @@
             </div>
         </div>
 
-        <div id="prewedding" class="section text-center background-white">
+        <div id="prewedding" data-anchor="prewedding" class="section text-center background-white">
             <img src="/assets/design.webp" alt="" srcset="" class="design">
             <div class="row section-header">
                 <div class="col col-md-10 offset-md-1">
@@ -184,7 +184,7 @@
             </div>
         </div>
 
-        <div id="gallery" class="section">
+        <div id="gallery" data-anchor="gallery" class="section">
             <div class="row section-header">
                 <div class="col col-md-10 offset-md-1">
                     <h1>Gallery</h1>
