--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                     <div class="row wedding-banner-text"></div>
                     <div class="row">
                         <div class="col wedding-banner-text wedding-banner-date">
-                            7th Feb 2022<br/>Golden leaf Banquet Hall, Near Kathora Chowk, Amravati
+                            7th Feb 2022<br />Golden leaf Banquet Hall, Near Kathora Chowk, Amravati
                         </div>
                     </div>
                 </div>
@@ -139,7 +139,7 @@
                     <p>Phere <span>7th Feburary 1:00 PM, Golden leaf hall</span></p>
                 </div>
                 <div class="col-md-4 py-3" id="two">
-                    <img src="assets/phere.webp" class="img-fluid" alt="">
+                    <img src="assets/reception.webp" class="img-fluid" alt="">
                     <p>Reception <span>13th Feburary 7:30 PM, Seasons banquet, Akurdi, Pune</span></p>
                 </div>
             </div>
@@ -152,7 +152,7 @@
                     <h1>Engagement</h1>
                 </div>
             </div>
-            <div class="row">
+            <div class="row video">
                 <div class="col-10 offset-1">
                     <div class="ratio ratio-16x9">
                         <iframe src="https://www.youtube.com/embed/Sl-AI-rbfMY" title="YouTube video player"
@@ -197,7 +197,7 @@
             </div>
         </div>
 
-        <footer data-anchor="footer" class="text-center fp-auto-height fp-section">
+        <footer data-anchor="footer" class="text-center fp-auto-height fp-section background-white">
             <div class="row">
                 <div class="col">
                     Designed and built by the bride and groom!
